fixed image overlapping

--- a/public/sass/components/tabscontent.scss
+++ b/public/sass/components/tabscontent.scss
@@ -17,7 +17,7 @@
         flex-direction: column;
     }
 
-    .baal{
+    &--img-container{
         flex: 2;
     }
 
